Updated logo, text

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKRT</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h1>SKRT</h1>
+        <img src="images/logo.png" width="200">
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
