--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>SKRT</h1>
+        <img src="images/logo.png" width="200">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
