--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
         </nav>
     </header>
 
+    <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
+    
     <main>
         <h2>About</h2>
         <p>My name is joshua hayden carnegie estell</p>
@@ -32,7 +34,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 SKRT. All rights reserved.</p>
+        <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
+        <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
 </body>
 </html>
