--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,11 @@
         </nav>
     </header>
 
+    <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
+
     <main>
         <h2>Contact Us</h2>
-        <p>Have questions? We're here to help! Fill out the form below or email us at <strong>support@skrt.club</strong></p>
+        <p>Have questions? We're here to help! Fill out the form below or email us at <strong>SKuppoRT0@gmail.com</strong></p>
         
         <form action="#" method="post">
             <label for="name">Name:</label>
@@ -39,7 +41,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 SKRT. All rights reserved.</p>
+        <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
+        <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
 </body>
 </html>
