--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             </ul>
         </nav>
     </header>
-    
+
+    <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
+
     <main>
     <section class="hero">
         <h1>This is like the main page</h1>
@@ -29,7 +31,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 SKRT. All rights reserved.</p>
+        <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
+        <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
 </body>
 </html>
