--- a/shop.html
+++ b/shop.html
@@ -20,12 +20,14 @@
         </nav>
     </header>
 
+    <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
+
     <main>
         <h2>Shop Our Collection</h2>
         <div class="product-grid">
             <div class="product">
-                <img src="images/product1.jpg" alt="Product 1">
-                <h3>Business Suit</h3>
+                <img src="images/product1.jpg" width="90" alt="Product 1">
+                <h3>Jeffy</h3>
                 <p>$149.99</p>
                 <button>Add to Cart</button>
             </div>
@@ -45,7 +47,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 SKRT. All rights reserved.</p>
+        <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
+        <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
 </body>
 </html>
