--- a/about/index.html
+++ b/about/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKRT | About</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <header>
-        <img src="images/logo.png" width="200">
+        <img src="../images/logo.png" width="200">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/shop">Shop</a></li>
+                <li><a href="/about" class="active">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
+    <img src="../images/barbed_wire.png" alt="Decorative Logo" class="between-img">
     
     <main>
         <h2>About</h2>
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
+        <img src="../images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
         <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
 </body>
