--- a/shop/index.html
+++ b/shop/index.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKRT | Shop</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <header>
-        <img src="images/logo.png" width="200">
+        <img src="../images/logo.png" width="200">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html" class="active">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/shop" class="active">Shop</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
+    <img src="../images/barbed_wire.png" alt="Decorative Logo" class="between-img">
 
     <main>
         <h2>Shop Our Collection</h2>
         <div class="product-grid">
             <div class="product">
-                <img src="images/product1.jpg" width="90" alt="Product 1">
+                <img src="../images/product1.jpg" width="90" alt="Product 1">
                 <h3>Jeffy</h3>
                 <p>$149.99</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/product2.jpg" alt="Product 2">
+                <img src="../images/product2.jpg" alt="Product 2">
                 <h3>Formal Shirt</h3>
                 <p>$49.99</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="images/product3.jpg" alt="Product 3">
+                <img src="../images/product3.jpg" alt="Product 3">
                 <h3>Professional Blazer</h3>
                 <p>$89.99</p>
                 <button>Add to Cart</button>
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
+        <img src="../images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
         <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
 </body>
