--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
         <h1>This is like the main page</h1>
         <p>We should put something nonchalant here</p>
-        <a href="shop.html" class="cta">Shop Now</a>
+        <a href="/shop/" class="cta">Shop Now</a>
     </section>
     </main>
 
