--- a/shop/index.html
+++ b/shop/index.html
@@ -32,8 +32,8 @@
                 <button>Add to Cart</button>
             </div>
             <div class="product">
-                <img src="../images/product2.jpg" alt="Product 2">
-                <h3>Formal Shirt</h3>
+                <img src="../images/product2.jpg" height="90" alt="Product 2">
+                <h3>Lathan (#1 Crashout)</h3>
                 <p>$49.99</p>
                 <button>Add to Cart</button>
             </div>
