added animations & new icons

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 
     <img src="images/barbed_wire.png" alt="Decorative Logo" class="between-img">
 
-    <main>
-    <section class="hero">
-        <h1>This is like the main page</h1>
-        <p>We should put something nonchalant here</p>
-        <a href="/shop/" class="cta">Shop Now</a>
-    </section>
-    </main>
+    <div class="home-main">
+        <div class="notebook-container">
+            <img src="images/notebook.png" alt="Composition notebook with SKRT logo" class="notebook">
+            <img src="images/graffiti.png" alt="Graffiti logo" class="graffiti">
+            <a href="/shop" class="shop-button"></a>
+        </div>
+    </div>
+    
 
     <footer>
         <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
