--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div class="page-wrapper">
     <header>
         <img src="images/logo.png" width="200">
         <nav>
@@ -35,5 +36,6 @@
         <img src="images/ripped_paper.png" class="footer-rip" alt="Ripped Paper Effect">
         <p class="copyright">&copy; 2025 SKRT. All rights reserved.</p>
     </footer>
+    </div>
 </body>
 </html>
